Make sure the scrollbar won't take space

--- a/wikilegis/static/styles/templates/bill/_content.scss
+++ b/wikilegis/static/styles/templates/bill/_content.scss
@@ -2,6 +2,8 @@
   background-color: $color-gray-95;
   flex: 1 1 auto;
   overflow-y: auto;
+  overflow-y: overlay; // Favor 'overlay' in the cascade for supported browsers
+  overflow-x: hidden;
   will-change: transform;
 
   .content__close {
